Fixed database creation

--- a/08_database_proxy.ipynb
+++ b/08_database_proxy.ipynb
@@ -28,7 +28,7 @@
     "#export\n",
     "import pandas as pd\n",
     "import sqlite3\n",
-    "import time\n",
+    "# import timeList\n",
     "from kirby.properties import properties"
    ]
   },
@@ -67,7 +67,7 @@
     "    def __init__(self):\n",
     "        try:\n",
     "            self.properties_dict = properties()\n",
-    "            self.conn = sqlite3.connect(\"/data/db/wiki_data.db\")\n",
+    "            self.conn = sqlite3.connect(\"db/wikidata.db\")\n",
     "            print(self.conn)\n",
     "        except Exception as e:\n",
     "            print(e)\n",
@@ -93,26 +93,15 @@
     "            return 'not_alpha'\n",
     "\n",
     "    @staticmethod\n",
-    "    def clean_relations(relations_string):\n",
+    "    def clean_relations(relations_df):\n",
     "        \"\"\"\n",
-    "        :param relations_string: List of all the relations returned by database\n",
-    "        :type relations_string: string\n",
+    "        :param relations_df: Pandas dataframe of all the relations returned by database\n",
     "        :return: list of all relations\n",
     "        :rtype: List\n",
     "        \"\"\"\n",
     "        relations = []\n",
-    "        relation_row = []\n",
-    "        # print(relations_string)\n",
-    "        for idx, relation in enumerate(relations_string.split(',')):\n",
-    "            if idx & 1 == 1:\n",
-    "                relation_row.append(relation[1:-1])\n",
-    "            else:\n",
-    "                relation_row.append(relation[1:])\n",
-    "            if len(relation_row) == 2:\n",
-    "                relations.append(relation_row + [])\n",
-    "                # print(relation_row)\n",
-    "                relation_row.clear()\n",
-    "        # print(relations)\n",
+    "        for index, row in relations_df.iterrows():\n",
+    "            relations.append([row['property_id'], row['related_entity_id']])\n",
     "        return relations\n",
     "\n",
     "    @staticmethod\n",
@@ -237,7 +226,7 @@
     "            self.exit_procedure()\n",
     "        if entity_properties.empty:\n",
     "            return None\n",
-    "        return self.clean_relations(entity_properties['relations'].values[0])\n",
+    "        return self.clean_relations(entity_properties)\n",
     "\n",
     "    def get_entity_by_id(self, entity_id):\n",
     "\n",
@@ -292,7 +281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlite3.Connection object at 0x7f2e005976c0>\n"
+      "<sqlite3.Connection object at 0x7f12fde812d0>\n"
      ]
     }
    ],
@@ -343,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlite3.Connection object at 0x7f2e00597300>\n",
+      "<sqlite3.Connection object at 0x7f12fde81810>\n",
       "['Q5284', 'Bill Gates', 'American business magnate and philanthropist']\n"
      ]
     }
@@ -351,7 +340,7 @@
    "source": [
     "wiki = WikiDatabase()\n",
     "result = wiki.get_entity_by_label('Bill Gates')\n",
-    "# assert result == [['Q4909106', 'Bill Gates', 'American frontiersman'], ['Q1181671', 'Bill Gates', 'Wikimedia disambiguation page'], ['Q5284', 'Bill Gates', 'American business magnate and philanthropist']], 'Query failed'\n",
+    "assert result ==  ['Q5284', 'Bill Gates', 'American business magnate and philanthropist'], 'Query failed'\n",
     "print(result)"
    ]
   },
