--- a/10_insert_to_database.ipynb
+++ b/10_insert_to_database.ipynb
@@ -40,7 +40,8 @@
    "outputs": [],
    "source": [
     "# #export\n",
-    "# # Use if you created a text file when reading the wikidata file and now you want to insert the data to a database\n",
+    "# # Use if you created a text file when reading the wikidata file and \n",
+    "# now you want to insert the data to a database\n",
     "\n",
     "# def text_to_database(database_path, text_path):\n",
     "#     connection = sqlite3.connect(database_path) # Name of your database\n",
