--- a/13_read_wiki_data.ipynb
+++ b/13_read_wiki_data.ipynb
@@ -27,7 +27,40 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the JSON path:  data/latest-all.json.bz2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/latest-all.json.bz2\n",
+      "What output file do you want? a database file or a text file with insert statements? \n",
+      "0: text file\n",
+      "1: database file\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter 0 or 1:  1\n",
+      "Enter name of database file. Do not include .db:  wikidata\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database created\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -187,6 +220,8 @@
     "        output_file = input('Enter name of database file. Do not include .db: ')\n",
     "\n",
     "    read_wiki_data(wiki_dump, output_format, output_file)\n",
+    "    if output_format == 1:\n",
+    "        cd.split_and_optimize('{}.db'.format(output_file))\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
