--- a/14_create_database.ipynb
+++ b/14_create_database.ipynb
@@ -21,7 +21,8 @@
    "source": [
     "#export\n",
     "import sqlite3\n",
-    "import traceback"
+    "import traceback\n",
+    "import re\n"
    ]
   },
   {
@@ -67,11 +68,12 @@
     "    conn = None\n",
     "    try:\n",
     "        conn = sqlite3.connect('{}.db'.format(database_name))\n",
+    "        conn.create_function(\"REGEXP\", 2, regexp)\n",
     "        c = conn.cursor()\n",
-    "        for i in range(ord('a'), ord('z') + 1):\n",
-    "            c.execute('INSERT INTO Entities_{} SELECT * FROM Entities WHERE label LIKE \\\"{}%\\\";'.format(chr(i), chr(i)))\n",
-    "            c.execute('CREATE INDEX index_id_{} ON Entities_{} (label);'.format(chr(i), chr(i)))\n",
-    "            conn.commit()\n",
+    "#         for i in range(ord('a'), ord('z') + 1):\n",
+    "#             c.execute('INSERT INTO Entities_{} SELECT * FROM Entities WHERE label LIKE \\\"{}%\\\";'.format(chr(i), chr(i)))\n",
+    "#             c.execute('CREATE INDEX index_id_{} ON Entities_{} (label);'.format(chr(i), chr(i)))\n",
+    "#             conn.commit()\n",
     "        c.execute('INSERT INTO Entities_not_alpha SELECT * FROM Entities WHERE label NOT REGEXP \\'[a-zA-Z]\\';')\n",
     "        c.execute('CREATE INDEX index_id_not_alpha ON Entities_not_alpha (label);')\n",
     "        c.execute('CREATE INDEX index_id_alias ON Aliases (entity_id);')\n",
@@ -84,7 +86,11 @@
     "        conn.commit()\n",
     "        conn.close()\n",
     "        traceback.print_exc()\n",
-    "        print(\"Error creating database. Please try to run the code again\")\n"
+    "        print(\"Error creating database. Please try to run the code again\")\n",
+    "        \n",
+    "def regexp(expr, item):\n",
+    "    reg = re.compile(expr)\n",
+    "    return reg.search(item) is not None\n"
    ]
   },
   {
@@ -102,13 +108,31 @@
     }
    ],
    "source": [
-    "create_database('test')"
+    "# create_database('db/wikidata')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a9cfa6f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database created\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split_and_optimize('db/wikidata')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edaf7b43-656c-4560-8920-067f3c4be212",
    "metadata": {},
    "outputs": [],
    "source": []
