--- a/05_basic_model.ipynb
+++ b/05_basic_model.ipynb
@@ -115,7 +115,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
     "# Creation\n",
     "basic_model = BasicModel(RunParams())\n",
     "assert isinstance(basic_model, BasicModel)"
@@ -125,9 +124,87 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: True, used: True\n",
+      "TPU available: None, using: 0 TPU cores\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "Running in fast_dev_run mode: will run a full train, val and test loop using 1 batch(es).\n",
+      "Using custom data configuration default\n",
+      "Reusing dataset text (/home/rob/.cache/huggingface/datasets/text/default-9b5839420c3d088b/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab)\n",
+      "Loading cached processed dataset at /home/rob/.cache/huggingface/datasets/text/default-9b5839420c3d088b/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-ed579f3079c7d61d.arrow\n",
+      "Loading cached processed dataset at /home/rob/.cache/huggingface/datasets/text/default-9b5839420c3d088b/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-44ced3b9c68b6a40.arrow\n",
+      "Loading cached processed dataset at /home/rob/.cache/huggingface/datasets/text/default-9b5839420c3d088b/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-57b7bcff66ef2448.arrow\n",
+      "Loading cached processed dataset at /home/rob/.cache/huggingface/datasets/text/default-9b5839420c3d088b/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-eb0cc28f2f1a46b1.arrow\n",
+      "Loading cached processed dataset at /home/rob/.cache/huggingface/datasets/text/default-9b5839420c3d088b/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-e22c4d9a490aad23.arrow\n",
+      "Using custom data configuration default\n",
+      "Reusing dataset text (/home/rob/.cache/huggingface/datasets/text/default-9b5839420c3d088b/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab)\n",
+      "Loading cached processed dataset at /home/rob/.cache/huggingface/datasets/text/default-9b5839420c3d088b/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-72298f79bfdbb0aa.arrow\n",
+      "Loading cached processed dataset at /home/rob/.cache/huggingface/datasets/text/default-9b5839420c3d088b/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-0fe2e50cd4bfd845.arrow\n",
+      "Loading cached processed dataset at /home/rob/.cache/huggingface/datasets/text/default-9b5839420c3d088b/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-b34acaf1ce8c81f4.arrow\n",
+      "Loading cached processed dataset at /home/rob/.cache/huggingface/datasets/text/default-9b5839420c3d088b/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-881eafded0bbef19.arrow\n",
+      "Loading cached processed dataset at /home/rob/.cache/huggingface/datasets/text/default-9b5839420c3d088b/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-12ff2874e47526c0.arrow\n",
+      "\n",
+      "  | Name  | Type             | Params\n",
+      "-------------------------------------------\n",
+      "0 | model | GPT2LMHeadModel  | 124 M \n",
+      "1 | loss  | CrossEntropyLoss | 0     \n",
+      "-------------------------------------------\n",
+      "124 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "124 M     Total params\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "130bcf978ef24e88900083f2ccdb9dfc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', description='Training', layout=Layout(flex='2'), max…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', description='Validating', layout=Layout(flex='2'), m…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#export\n",
     "run_params = RunParams(debug=True)\n",
     "basic_model = BasicModel(run_params)\n",
     "trainer = pl.Trainer(\n",
@@ -145,7 +222,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['attention_mask', 'input_ids', 'labels'],\n",
+       "    num_rows: 495\n",
+       "})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "basic_model.train_ds"
    ]
@@ -160,9 +251,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "kirby",
    "language": "python",
-   "name": "python3"
+   "name": "kirby"
   }
  },
  "nbformat": 4,
