Run: Wikitext baseline

--- a/01_dataset_builder.ipynb
+++ b/01_dataset_builder.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "source": [
     "# Dataset Builder\n",
-    "> Builds an optimal dataset with knowledge base relations, from a vanilla dataset.\n",
+    "> Builds a number of types of datasets that are augmented by the `wikidata` knowledge base\n",
     "\n"
    ]
   },
