--- a/04_run_parameters.ipynb
+++ b/04_run_parameters.ipynb
@@ -42,7 +42,7 @@
     "                model='gpt2',\n",
     "                data_dir = 'data/',\n",
     "                data_files = {'train': ['data/wiki.train.raw'], 'valid': ['data/wiki.valid.raw'], 'test': ['data/wiki.test.raw']},\n",
-    "                max_epochs=1,\n",
+    "                max_epochs=1000,\n",
     "                debug=True,\n",
     "                batch_size=8,\n",
     "                data_set_percentage=1,\n",
@@ -71,7 +71,8 @@
     "        self.repo = repo\n",
     "        self.num_workers = num_workers\n",
     "        self.kb_statements_file = kb_statements_file\n",
-    "        self.run_name = run_name\n"
+    "        self.run_name = run_name\n",
+    "        self.project_name = project_name\n"
    ]
   },
   {
