--- a/03_experiment.ipynb
+++ b/03_experiment.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "import pytorch_lightning as pl\n",
     "import torch\n",
     "import wandb\n",
@@ -45,20 +46,19 @@
     "class Experiment():\n",
     "    def __init__(self, run_params):\n",
     "        self.run_params = run_params\n",
-    "        self.model = BasicModel(run_params.model)\n",
+    "        self.model = BasicModel(run_params)\n",
     "\n",
     "    def run(self):\n",
     "        trainer = pl.Trainer(\n",
-    "            default_root_dir='logs',\n",
     "            gpus=(1 if torch.cuda.is_available() else 0),\n",
     "            max_epochs=self.run_params.max_epochs,\n",
     "            fast_dev_run=self.run_params.debug,\n",
-    "            logger=TensorBoardLogger(save_dir='logs/', \n",
-    "                                name=self.run_params.run_name, \n",
+    "            logger=WandbLogger(name=self.run_params.run_name, \n",
     "                                project=self.run_params.project_name),\n",
+    "            callbacks=[EarlyStopping(monitor='val_loss')],\n",
     "        )\n",
     "\n",
-    "        trainer.fit(model)\n"
+    "        trainer.fit(self.model)\n"
    ]
   },
   {
