Created description dataset

--- a/08_database_proxy.ipynb
+++ b/08_database_proxy.ipynb
@@ -142,7 +142,6 @@
     "        \"\"\"\n",
     "        entities_id = None\n",
     "        try:\n",
-    "            print('I love me!')\n",
     "            entities_id = pd.read_sql_query(\n",
     "                \"SELECT * FROM Entities WHERE label  LIKE \\\"%{}%\\\";\".format(self.remove_quotations(label)),\n",
     "                self.conn)\n",
@@ -187,12 +186,14 @@
     "            entity_id = pd.read_sql_query(\n",
     "                \"SELECT * FROM Entities_{} WHERE label =  \\\"{}\\\";\"\\\n",
     "                .format(table_name, self.remove_quotations(label)), self.conn)\n",
-    "            entities = entity_id.values.tolist()\n",
-    "            # Return the first entity\n",
-    "            entities = self._sort_entities(entities)\n",
+    "            if entity_id.empty:\n",
+    "                entities = self.get_entities_by_label_extensive(label)\n",
+    "            else:\n",
+    "                entities = entity_id.values.tolist()\n",
+    "                # Return the first entity\n",
+    "                entities = self._sort_entities(entities)\n",
     "            return entities[0]\n",
     "        except Exception as e:\n",
-    "            print(e)\n",
     "            self.exit_procedure()\n",
     "            \n",
     "    def _sort_entities(self, entities):\n",
@@ -281,7 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlite3.Connection object at 0x7f12fde812d0>\n"
+      "<sqlite3.Connection object at 0x7fca38428c70>\n"
      ]
     }
    ],
@@ -332,7 +333,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlite3.Connection object at 0x7f12fde81810>\n",
+      "<sqlite3.Connection object at 0x7fc9960223b0>\n",
       "['Q5284', 'Bill Gates', 'American business magnate and philanthropist']\n"
      ]
     }
@@ -393,13 +394,6 @@
     "for property_r in wiki.get_entity_associations('Q5284'): \n",
     "    print(wiki.get_property_string(property_r[0], property_r[1]))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
