--- a/01_dataset_builder.ipynb
+++ b/01_dataset_builder.ipynb
@@ -26,7 +26,8 @@
     "import spacy\n",
     "import en_core_web_sm\n",
     "import tensorflow_hub as hub\n",
-    "from sklearn.neighbors import NearestNeighbors"
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "import json"
    ]
   },
   {
@@ -35,7 +36,20 @@
    "source": [
     "# Dataset Builder\n",
     "> Builds a number of types of datasets that are augmented by the `wikidata` knowledge base\n",
-    "\n"
+    "\n",
+    "## Dataset Variations\n",
+    "\n",
+    "Keywords can be supplied to the `build` function through the `dataset_type` keyword argument\n",
+    "\n",
+    "### Description\n",
+    "\n",
+    "`DatasetBuilder.build(ds, dataset_type='description')`\n",
+    "\n",
+    "Augements the given dataset with the description of the `keyword`. \n",
+    "\n",
+    "*Example*\n",
+    "\n",
+    "`Stephen Curry is my favorite basketball player. {Stephen Curry: {Description: American basketball player}}`"
    ]
   },
   {
@@ -57,11 +71,40 @@
     "    def build(self, ds, dataset_type='random'):\n",
     "        \"Build a database based a given dataset\"\n",
     "        if dataset_type == 'random':\n",
-    "            ds.map(self.random, batched=False)\n",
+    "            return ds.map(self.random, batched=False)\n",
     "        elif dataset_type == 'description':\n",
-    "            pass\n",
+    "            return ds.map(self.description, batched=False)\n",
     "        elif dataset_type == 'relevant':\n",
     "            pass\n",
+    "        \n",
+    "    def description(self, sequence):\n",
+    "        \"\"\"Return a description augmented version of the seqeuence `text`\"\"\"\n",
+    "        text = sequence['text']\n",
+    "        try:\n",
+    "            keyword_entity = self._keyword_entity(text)\n",
+    "            json_string = self._get_json(keyword_entity)\n",
+    "            # Return concatenated string\n",
+    "            sequence['text'] += \" \" + json_string\n",
+    "        except Exception as e:\n",
+    "            # We expect there to be an exception when no entities are found\n",
+    "            pass\n",
+    "        return sequence\n",
+    "    \n",
+    "    def _keyword_entity(self, text):\n",
+    "        \"\"\"Return the entity of the highest ranked keyword\"\"\"\n",
+    "        ranked_phrases = self.get_ranked_phrases(text)\n",
+    "        for phrase in ranked_phrases:\n",
+    "            entity = self.db.get_entity_by_label(phrase)\n",
+    "            if entity:\n",
+    "                return entity\n",
+    "        return None\n",
+    "        \n",
+    "    def _get_json(self, item):\n",
+    "        \"\"\"Return JSON version of list object\"\"\"\n",
+    "        d = {\"label\": None, \"description\": None}\n",
+    "        d['label'] = item[1]\n",
+    "        d['description'] = item[2]\n",
+    "        return json.dumps(d)\n",
     "        \n",
     "    def keyword(self, x):\n",
     "        ranked_phrases = self.get_ranked_phrases(x)\n",
@@ -79,22 +122,16 @@
     "    \n",
     "\n",
     "    def get_entities_in_text(self, text):\n",
-    "        \"Returns entities found in the sentence `x`\"\n",
-    "        doc = self.nlp(x)\n",
+    "        \"Returns entities found in the sentence `text`\"\n",
+    "        doc = self.nlp(text)\n",
     "        entities = []\n",
     "        spacy_entities = doc.ents\n",
     "        for entity in spacy_entities: \n",
     "            entity = self.db.get_entity_by_label(entity.text)\n",
-    "            entities.append(entity)\n",
-    "        return entities\n",
-    "\n",
-    "    def entity(self, ranked_phrases):\n",
-    "        \"Queries the knowledge base to find the entity and it's relations\"\n",
-    "        for phrase in ranked_phrases:\n",
-    "            entity = self.kba.get_entity(phrase)\n",
-    "            if entity is not None:\n",
-    "                return entity\n",
-    "        return entity   \n",
+    "            if entity:\n",
+    "                entities.append(entity)\n",
+    "        return entities  \n",
+    "    \n",
     "    def get_entity_associations(self, entity_id):\n",
     "        \"\"\"\n",
     "        Given an `entity_id` return a dictionary containing all the associated properties.\n",
@@ -124,27 +161,113 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "unable to open database file\n"
+      "<sqlite3.Connection object at 0x7fab329612d0>\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'exit' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m~/git/kirby/kirby/database_proxy.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     16\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mproperties_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mproperties\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msqlite3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/home/rob/git/kirby/db/mind.cs.byu.edu/kirby/wikidata.db\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOperationalError\u001b[0m: unable to open database file",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-b277b1d413cb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# creation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mds_builder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDatasetBuilder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mds_builder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDatasetBuilder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-c6b3b549c46b>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrake\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWikiDatabase\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0men_core_web_sm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mmodule_url\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"https://tfhub.dev/google/universal-sentence-encoder/4\"\u001b[0m \u001b[0;31m#@param [\"https://tfhub.dev/google/universal-sentence-encoder/4\", \"https://tfhub.dev/google/universal-sentence-encoder-large/5\"]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/git/kirby/kirby/database_proxy.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m             \u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mexit_procedure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'exit' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:absl:Using /tmp/tfhub_modules to cache modules.\n",
+      "WARNING:datasets.builder:Using custom data configuration default-9b5839420c3d088b\n",
+      "WARNING:datasets.builder:Reusing dataset text (/home/rob/.cache/huggingface/datasets/text/default-9b5839420c3d088b/0.0.0/e16f44aa1b321ece1f87b07977cc5d70be93d69b20486d6dacd62e12cf25c9a5)\n",
+      "WARNING:datasets.fingerprint:Parameter 'function'=<bound method DatasetBuilder.description of <__main__.DatasetBuilder object at 0x7faa9eca8b00>> of the transform datasets.arrow_dataset.Dataset._map_single couldn't be hashed properly, a random hash was used instead. Make sure your transforms and parameters are serializable with pickle or dill for the dataset fingerprinting and caching to work. If you reuse this transform, the caching mechanism will consider it to be different from the previous calls and recompute everything. This warning is only showed once. Subsequent hashing failures won't be showed.\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1c7719c46126447499d30341a1cac843",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=18014.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:datasets.builder:Using custom data configuration default-9b5839420c3d088b\n",
+      "WARNING:datasets.builder:Reusing dataset text (/home/rob/.cache/huggingface/datasets/text/default-9b5839420c3d088b/0.0.0/e16f44aa1b321ece1f87b07977cc5d70be93d69b20486d6dacd62e12cf25c9a5)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b26c40b28429442393a460447f7a8e40",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=38.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10776"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# Build description dataset\n",
+    "from kirby.run_params import RunParams\n",
+    "from kirby.data_manager import DataManager\n",
+    "from datasets import load_dataset\n",
+    "\n",
+    "run_params = RunParams(debug=False)\n",
+    "data_manager = DataManager(run_params)\n",
+    "ds_builder = DatasetBuilder()\n",
+    "block_size = 128\n",
+    "\n",
+    "split = 'train'\n",
+    "split = f'{split}[:{run_params.batch_size*block_size if run_params.debug else f\"{run_params.data_set_percentage}%\"}]'\n",
+    "ds = load_dataset('text', data_files=run_params.data_files, split=split)\n",
+    "aug_train_ds = ds_builder.build(ds, dataset_type='description')\n",
+    "\n",
+    "# Save\n",
+    "aug_train_ds.to_csv('data/augmented_datasets/description_train.csv')\n",
+    "\n",
+    "split = 'valid'\n",
+    "split = f'{split}[:{run_params.batch_size*block_size if run_params.debug else f\"{run_params.data_set_percentage}%\"}]'\n",
+    "ds = load_dataset('text', data_files=run_params.data_files, split=split)\n",
+    "aug_valid_ds = ds_builder.build(ds, dataset_type='description')\n",
+    "\n",
+    "# Save\n",
+    "aug_valid_ds.to_csv('data/augmented_datasets/description_valid.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# creation\n",
     "ds_builder = DatasetBuilder()\n",
@@ -168,28 +291,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Execution failed on sql 'SELECT * FROM Entities_c WHERE label =  \"Cristiano Ronaldo\";': no such table: Entities_c\n",
-      "None\n",
-      "Execution failed on sql 'SELECT * FROM Entities_c WHERE label =  \"Cristiano Ronaldo\";': no such table: Entities_c\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "ERROR in `database_proxy`",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-ac7d79ff49e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mds_builder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_entity_by_label\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Cristiano Ronaldo'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mds_builder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_entity_by_label\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Cristiano Ronaldo'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'Q11571'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Cristiano Ronaldo'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Portuguese association football player'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'ERROR in `database_proxy`'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: ERROR in `database_proxy`"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(ds_builder.db.get_entity_by_label('Cristiano Ronaldo'))\n",
     "assert ds_builder.db.get_entity_by_label('Cristiano Ronaldo') == ['Q11571', 'Cristiano Ronaldo', 'Portuguese association football player'], 'ERROR in `database_proxy`'"
@@ -199,15 +301,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['Q2283', 'Microsoft', 'American multinational technology corporation'], ['Q224892', 'Bethesda', 'Wikimedia disambiguation page']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get Entities from the sentence\n",
     "x = \"Microsoft has bought Bethesda\"\n",
@@ -253,6 +347,17 @@
     " 'director / manager': 'Satya Nadella',\n",
     " 'external auditor': 'Deloitte & Touche LLP',\n",
     " 'partnership with': 'ID2020'}, 'Error in `dataset_builder.get_entity_associations()`'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Description\n",
+    "text = \"Darth Vader cut off Luke Skywalker's hand\"\n",
+    "ds_builder.description(text)"
    ]
   },
   {
