--- a/03_experiment.ipynb
+++ b/03_experiment.ipynb
@@ -58,7 +58,8 @@
     "            callbacks=[EarlyStopping(monitor='val_loss')],\n",
     "        )\n",
     "\n",
-    "        trainer.fit(self.model)\n"
+    "        trainer.fit(self.model)\n",
+    "        trainer.save_checkpoint(self.run_params.run_name())"
    ]
   },
   {
