--- a/04_run_parameters.ipynb
+++ b/04_run_parameters.ipynb
@@ -42,6 +42,7 @@
     "                model='gpt2',\n",
     "                data_dir = 'data/',\n",
     "                data_files = {'train': ['data/wiki.train.raw'], 'valid': ['data/wiki.valid.raw'], 'test': ['data/wiki.test.raw']},\n",
+    "                data_file_type = 'text', \n",
     "                max_epochs=1000,\n",
     "                debug=True,\n",
     "                batch_size=8,\n",
@@ -60,6 +61,7 @@
     "        self.model = model\n",
     "        self.data_dir = data_dir\n",
     "        self.data_files = data_files\n",
+    "        self.data_file_type = data_file_type\n",
     "        self.max_epochs = max_epochs\n",
     "        self.debug = debug\n",
     "        self.batch_size = batch_size\n",
