--- a/06_data_manager.ipynb
+++ b/06_data_manager.ipynb
@@ -54,7 +54,7 @@
     "        tokenizer = GPT2Tokenizer.from_pretrained(self.run_params.model)\n",
     "        tokenizer.pad_token = tokenizer.eos_token \n",
     "        split = f'{split}[:{self.run_params.batch_size*self.block_size if self.run_params.debug else f\"{self.run_params.data_set_percentage}%\"}]'\n",
-    "        ds = load_dataset('text', data_files=self.run_params.data_files, split=split)\n",
+    "        ds = load_dataset(self.run_params.data_file_type, data_files=self.run_params.data_files, split=split)\n",
     "        ds = ds.map(self.tokenize, batched=True, num_proc=4, remove_columns=['text'], fn_kwargs={'tokenizer':tokenizer})\n",
     "        ds = ds.map(\n",
     "            self.group_texts,\n",
@@ -71,6 +71,7 @@
     "        return tokens\n",
     "    \n",
     "    def group_texts(self, examples):\n",
+    "        import pdb; pdb.set_trace()\n",
     "        # Concatenate all texts.\n",
     "        concatenated_examples = {k: sum(examples[k], []) for k in examples.keys()}\n",
     "        total_length = len(concatenated_examples[list(examples.keys())[0]])\n",
