Vanilla baseline file created

--- a/03_experiment.ipynb
+++ b/03_experiment.ipynb
@@ -18,6 +18,7 @@
    "outputs": [],
    "source": [
     "#export\n",
+    "import os\n",
     "import pytorch_lightning as pl\n",
     "import torch\n",
     "import wandb\n",
@@ -56,6 +57,7 @@
     "            logger=WandbLogger(name=self.run_params.run_name, \n",
     "                                project=self.run_params.project_name),\n",
     "            callbacks=[EarlyStopping(monitor='val_loss')],\n",
+    "            default_root_dir=os.getcwd() + '/../checkpoints',\n",
     "        )\n",
     "\n",
     "        trainer.fit(self.model)\n"
@@ -77,6 +79,27 @@
     "# Creation\n",
     "experiment = Experiment(RunParams())\n",
     "assert isinstance(experiment, Experiment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/rob/git/kirby'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.getcwd()"
    ]
   },
   {
