Variable gpu count

--- a/03_experiment.ipynb
+++ b/03_experiment.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "    def run(self):\n",
     "        trainer = pl.Trainer(\n",
-    "            gpus=(1 if torch.cuda.is_available() else 0),\n",
+    "            gpus=self.run_params.num_gpus,\n",
     "            max_epochs=self.run_params.max_epochs,\n",
     "            fast_dev_run=self.run_params.debug,\n",
     "            logger=WandbLogger(name=self.run_params.run_name, \n",
