--- a/04_run_parameters.ipynb
+++ b/04_run_parameters.ipynb
@@ -18,7 +18,8 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "import multiprocessing"
+    "import multiprocessing\n",
+    "import torch"
    ]
   },
   {
@@ -52,6 +53,7 @@
     "                lr=1e-2,\n",
     "                repo='wikitext-103-raw-v1',\n",
     "                num_workers=multiprocessing.cpu_count(),\n",
+    "                num_gpus=torch.cuda.device_count(),\n",
     "                kb_statements_file=None,\n",
     "                run_name='test',\n",
     "                project_name='kirby'\n",
@@ -70,6 +72,7 @@
     "        self.lr = lr\n",
     "        self.repo = repo\n",
     "        self.num_workers = num_workers\n",
+    "        self.num_gpus=num_gpus\n",
     "        self.kb_statements_file = kb_statements_file\n",
     "        self.run_name = run_name\n",
     "        self.project_name = project_name\n"
@@ -111,6 +114,26 @@
    ],
    "source": [
     "run_params.run_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.device_count()"
    ]
   },
   {
