Pretrained option added to run parameters

--- a/04_run_parameters.ipynb
+++ b/04_run_parameters.ipynb
@@ -41,6 +41,7 @@
     "class RunParams():\n",
     "    def __init__(self, \n",
     "                model='gpt2',\n",
+    "                pretrained=False,\n",
     "                data_dir = 'data/',\n",
     "                data_files = {'train': ['data/wiki.train.raw'], 'valid': ['data/wiki.valid.raw'], 'test': ['data/wiki.test.raw']},\n",
     "                max_epochs=1000,\n",
@@ -60,6 +61,7 @@
     "            ):\n",
     "            \n",
     "        self.model = model\n",
+    "        self.pretrained = pretrained\n",
     "        self.data_dir = data_dir\n",
     "        self.data_files = data_files\n",
     "        self.max_epochs = max_epochs\n",
