--- a/05_basic_model.ipynb
+++ b/05_basic_model.ipynb
@@ -46,15 +46,16 @@
     "    def __init__(self, run_params):\n",
     "        super().__init__()\n",
     "        self.run_params = run_params\n",
-    "        config = GPT2Config()\n",
-    "        self.model = GPT2LMHeadModel(config)\n",
+    "        if self.run_params.pretrained:\n",
+    "            self.model = GPT2LMHeadModel.from_pretrained(self.run_params.model)\n",
+    "        else:\n",
+    "            config = GPT2Config()\n",
+    "            self.model = GPT2LMHeadModel(config)\n",
     "        self.loss = torch.nn.CrossEntropyLoss(reduction='none')\n",
-    "        pass\n",
     "\n",
     "    def prepare_data(self):\n",
     "        data_manager = DataManager(self.run_params)\n",
     "        self.train_ds, self.val_ds = data_manager.prepare_data()\n",
-    "\n",
     "\n",
     "    def forward(self, x):\n",
     "        loss = self.model(x['input_ids'], attention_mask=x['attention_mask'], labels=x['labels'])[0]\n",
