Changed SGD to Adam

--- a/05_basic_model.ipynb
+++ b/05_basic_model.ipynb
@@ -96,10 +96,8 @@
     "                )\n",
     "\n",
     "    def configure_optimizers(self):\n",
-    "        return torch.optim.SGD(\n",
-    "            self.parameters(),\n",
-    "            lr=self.run_params.lr,\n",
-    "            momentum=self.run_params.momentum,\n",
+    "        return torch.optim.Adam(\n",
+    "            self.parameters()\n",
     "        ) "
    ]
   },
