--- a/05_basic_model.ipynb
+++ b/05_basic_model.ipynb
@@ -157,9 +157,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kirby",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kirby"
+   "name": "python3"
   }
  },
  "nbformat": 4,
