--- a/08_database_proxy.ipynb
+++ b/08_database_proxy.ipynb
@@ -282,7 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlite3.Connection object at 0x7fca38428c70>\n"
+      "<sqlite3.Connection object at 0x7f30b9de1c60>\n"
      ]
     }
    ],
@@ -290,6 +290,16 @@
     "# Creation\n",
     "db = WikiDatabase()\n",
     "assert isinstance(db, WikiDatabase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label = 'tactical role @-@ playing video game developed'\n",
+    "get_entity_by_label()"
    ]
   },
   {
@@ -401,18 +411,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   }
  },
  "nbformat": 4,
